# dep-2

./: LICENSE.txt  README.md  pylock.toml  pyproject.toml
src/dep_2/: __about__.py  __init__.py  main.py
