[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dep-2"
dynamic = ["version"]
description = 'Dependecy lvl 2'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [{ name = "Marcin r. Raba", email = "rabkins@me.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "click==8.2.1",
]

[project.urls]
Documentation = "https://github.com/Marcin r. Raba/dep-2#readme"
Issues = "https://github.com/Marcin r. Raba/dep-2/issues"
Source = "https://github.com/Marcin r. Raba/dep-2"

[tool.hatch.version]
path = "src/dep_2/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dep_2 tests}"

[tool.coverage.run]
source_pkgs = ["dep_2", "tests"]
branch = true
parallel = true
omit = ["src/dep_2/__about__.py"]

[tool.coverage.paths]
dep_2 = ["src/dep_2", "*/dep-2/src/dep_2"]
tests = ["tests", "*/dep-2/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
